<resources>
  <string name="app_name" translatable="false">Inventory</string>
  <string name="product">Product</string>
  <string name="name">Name</string>
  <string name="description">Description</string>
  <string name="price">Price</string>
  <string name="quantity">Quantity</string>
  <string name="photo">Photo</string>
  <string name="photo_hint">Tap to add or change the photo</string>
  <string name="supplier">Supplier</string>
  <string name="email">Email</string>
  <string name="phone">Phone</string>
  <string name="order_more">Order more</string>
  <string name="no_products_registered">No products registered</string>
  <string name="add_some_products">Start adding some product</string>
  <string name="save">Save</string>
  <string name="delete">Delete</string>
  <string name="insert_dummy_data">Insert dummy data</string>
  <string name="delete_all_items">Delete all items</string>
  <string name="select_image">Select image</string>
  <string name="action_canceled">Action canceled</string>

  <string name="storage_permission_not_granted">Storage permission was not granted</string>
  <string name="storage_permission_not_ask_true"><![CDATA[Storage permission was not granted definitively.\nYou have to allow in the settings.]]></string>

  <string name="splash_text">
      <![CDATA[Inventory app developed by @khalilayache for\nUdacity Android Basics
      Nanodegree\nCode available in github.com/khalilayache]]>
  </string>

  <string name="add_new_product">Add new product</string>
  <string name="edit_product">Edit product</string>

  <string name="product_add_success">Product has been added successfully</string>
  <string name="product_add_error">Error while Product has been added</string>
  <string name="products_delete_success">All Products has been deleted successfully</string>
  <string name="products_delete_error">Error while all products has been deleted</string>

  <string name="product_out_stock">Product out of stock</string>
  <string name="product_sold_error">Error while product was sold</string>
  <string name="product_sold_success">Product sold successfully</string>

  <string name="dummy_add_success">Dummy Product has been added successfully</string>
  <string name="dummy_add_error">Error while Dummy Product has been added</string>

  <string name="intent_image_type" translatable="false">image/*</string>
  <string name="intent_email_type" translatable="false">text/plain</string>
  <string name="intent_email_mail_to" translatable="false">mailto: %s</string>
  <string name="intent_phone_type" translatable="false">tel:%s</string>
  <string name="scheme_package" translatable="false">package</string>

  <string name="settings">Settings</string>
  <string name="retry">Retry</string>

  <string name="price_mask">$ %.2f</string>
  <string name="quantity_mask">Qty: %d</string>

  <string name="price_format" translatable="false">%.2f</string>
  <string name="quantity_format" translatable="false">%d</string>

  <string name="empty_name">Empty name</string>
  <string name="empty_price">Empty price</string>
  <string name="empty_quantity">Empty quantity</string>
  <string name="empty_supplier_name">Empty supplier\'s name</string>
  <string name="invalid_product">Invalid product</string>
  <string name="empty_supplier_email_phone">Empty supplier\'s email and phone.</string>

  <string name="no_changes_made">No changes was made</string>
  <string name="product_updated">Product was updated</string>
  <string name="product_not_updated">Product was not updated</string>

  <string name="new_add_success">New product has been added successfully</string>
  <string name="new_add_error">Error while new product has been added</string>
  <string name="delete_success">Product has been deleted successfully</string>
  <string name="delete_error">Error while product has been deleted</string>
  <string name="invalid_inputs">Invalid inputs:\n</string>
  <string name="want_delete_item">Do you really want delete this item?</string>
  <string name="want_discard_changes">Do you really want discard the changes?</string>

  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="call">Call</string>
  <string name="cancel">Cancel</string>

  <string name="order_more_by_phone_or_email">Order more by call or email?</string>
  <string name="no_supplier_contact">There is no supplier contact</string>
  <string name="order_more_by_email">Order more by email?</string>
  <string name="order_more_by_phone">Order more by call?</string>
  <string name="invalid_number">Invalid number</string>
  <string name="invalid_email">Invalid email</string>

  <string name="email_subject">New order: %s</string>
  <string name="email_message"><![CDATA[Hi %s!\n\nWe are in need of more %d items of %s.\nCould you send us?\n\n
                                  Thanks in advance!\nRegards!]]></string>
</resources>
