<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/default_margin"
    app:cardElevation="@dimen/info_card_elevation"
    app:cardCornerRadius="@dimen/info_card_radius">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingStart="@dimen/default_padding"
      android:paddingEnd="@dimen/default_padding"
      android:paddingTop="@dimen/default_padding"
      android:paddingBottom="@dimen/info_padding_bottom">

    <!-- region Title -->
    <TextView
        android:id="@+id/suplier_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/item_image"
        android:layout_toStartOf="@id/item_stock"
        android:text="@string/supplier"
        android:textSize="@dimen/extra_large_font_size"
        android:textStyle="bold"/>

    <View
        android:id="@+id/view_title_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/info_line_height"
        android:layout_below="@id/suplier_title"
        android:layout_marginBottom="@dimen/info_line_margin_bottom"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@color/info_line_color"/>
    <!-- endregion Title -->

    <!-- region Name -->
    <TextView
        android:id="@+id/view_supplier_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_title_line"
        android:text="@string/name"
        android:textSize="@dimen/very_large_font_size"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_supplier_name"
        android:padding="@dimen/default_padding"
        android:textSize="@dimen/large_font_size"
        android:lines="@integer/info_default_lines"
        tools:text="Testando"
        android:background="@drawable/edit_text_background"
        android:inputType="text"
        tools:ignore="LabelFor"/>

    <!-- endregion Title -->

    <!-- region Email -->
    <TextView
        android:id="@+id/view_supplier_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/supplier_name"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/email"
        android:textSize="@dimen/very_large_font_size"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/supplier_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_supplier_email"
        android:padding="@dimen/default_padding"
        android:textSize="@dimen/large_font_size"
        android:lines="@integer/info_default_lines"
        tools:text="Testando"
        android:background="@drawable/edit_text_background"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor"/>

    <!-- endregion Email-->

    <!-- region Phone -->
    <TextView
        android:id="@+id/view_supplier_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/supplier_email"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/phone"
        android:textSize="@dimen/very_large_font_size"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/supplier_phone"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_supplier_phone"
        android:padding="8dp"
        android:textSize="16sp"
        tools:text="+55 (11) 91234-1234"
        android:background="@drawable/edit_text_background"
        android:inputType="phone"
        tools:ignore="LabelFor"/>

    <!-- endregion Phone -->

    <!-- region Order Button-->
    <LinearLayout
        android:id="@+id/order_more_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/info_phone_height"
        android:layout_below="@id/supplier_phone"
        android:layout_marginTop="@dimen/info_order_more_margin"
        android:gravity="center"
        android:background="@drawable/order_more_button_background"
        android:clickable="true"
        android:visibility="gone"
        android:focusable="true">

      <TextView
          android:id="@+id/order_more_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/order_more"
          android:textSize="@dimen/very_large_font_size"
          android:textStyle="bold"/>

    </LinearLayout>

    <!-- endregion -->

  </RelativeLayout>

</android.support.v7.widget.CardView>
