<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/default_margin"
    app:cardElevation="@dimen/info_card_elevation"
    app:cardCornerRadius="@dimen/info_card_radius">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingStart="@dimen/default_padding"
      android:paddingEnd="@dimen/default_padding"
      android:paddingTop="@dimen/default_padding"
      android:paddingBottom="@dimen/info_padding_bottom">

    <!-- region Title -->
    <TextView
        android:id="@+id/product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/item_image"
        android:layout_toStartOf="@id/item_stock"
        android:text="@string/product"
        android:textSize="@dimen/extra_large_font_size"
        android:textStyle="bold"/>

    <View
        android:id="@+id/view_title_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/info_line_height"
        android:layout_below="@id/product_title"
        android:layout_marginBottom="@dimen/info_line_margin_bottom"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@color/info_line_color"/>
    <!-- endregion Title -->

    <!-- region Name -->
    <TextView
        android:id="@+id/view_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_title_line"
        android:text="@string/name"
        android:textSize="@dimen/very_large_font_size"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_product_name"
        android:padding="@dimen/default_padding"
        android:textSize="@dimen/large_font_size"
        android:maxLines="@integer/info_default_lines"
        android:minLines="@integer/info_default_lines"
        android:lines="@integer/info_default_lines"
        android:background="@drawable/edit_text_background"
        android:inputType="text"
        tools:ignore="LabelFor"/>

    <!-- endregion Title -->

    <!-- region Description -->
    <TextView
        android:id="@+id/view_product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/description"
        android:textSize="@dimen/very_large_font_size"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_product_description"
        android:padding="@dimen/default_padding"
        android:textSize="@dimen/large_font_size"
        android:maxLines="@integer/info_description_lines"
        android:background="@drawable/edit_text_background"
        android:inputType="textMultiLine"
        tools:ignore="LabelFor"/>

    <!-- endregion Description -->

    <!-- region Price -->
    <TextView
        android:id="@+id/view_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/price"
        android:textSize="@dimen/very_large_font_size"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/product_price"
        android:layout_width="@dimen/info_price_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_product_price"
        android:padding="@dimen/default_padding"
        android:maxLength="@integer/info_price_length"
        android:textSize="@dimen/large_font_size"
        android:background="@drawable/edit_text_background"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor"/>

    <!-- endregion Price -->

    <!-- region Quantity -->
    <TextView
        android:id="@+id/view_product_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_price"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/quantity"
        android:textSize="@dimen/very_large_font_size"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/product_quantity"
        android:layout_width="@dimen/info_quantity_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_product_quantity"
        android:padding="@dimen/default_padding"
        android:maxLength="@integer/info_quantity_length"
        android:textSize="@dimen/large_font_size"
        android:background="@drawable/edit_text_background"
        android:inputType="number"
        tools:ignore="LabelFor"/>

    <!-- endregion Quantity -->

  </RelativeLayout>

</android.support.v7.widget.CardView>
